[package]
name = "cryptix_macros"
version = "0.3.0"
edition = "2024"
authors = ["VX1988 1988@vx-engineering.org"]
description = "Cryptix: Compile-Time String Encryption & Obfuscation Framework for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VX1988/cryptix.rs"
keywords = ["encryption", "compile-time", "proc-macro", "obfuscation"]
categories = ["cryptography"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
hex = "0.4.3"
aes = "0.8.4"
block-padding = "0.3.3"
base64 = "0.22.1"
libaes = "0.6.1"
cbc = "0.1.2"
cipher = "0.4.4"
clap = "4.5.31"
itertools = "0.10.3"
rand = "0.9.0"

# Add cryptix_1988 as dependency to access KEY constant and for calling decrypt()
cryptix_1988 = "0.5.0"
